[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotools"
version = "1.13.0"
description = "Pythonic in-silico liquid handling and creation of Tecan FreedomEVO worklists."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU Affero General Public License v3"}
authors = [
    {name = "Michael Osthege", email = "m.osthege@fz-juelich.de"},
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/jubiotech/robotools"
Documentation = "https://robotools.readthedocs.io/en/latest/"
Download = "https://pypi.org/project/robotools/"

[tool.setuptools]
package-dir = {"robotools" = "robotools"}

[tool.setuptools.package-data]
"robotools" = ["py.typed"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'test_.*?\.py$',
]
